--- a/02_introduccion_a_git.ipynb
+++ b/02_introduccion_a_git.ipynb
@@ -271,11 +271,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El archivo ```.git/config``` de un repositorio local.\n",
+    "### Ámbitos de configuración de *Git*.\n",
     "\n",
-    "El archivo ```config``` localizado en el directorio ```.git``` de un repositorio local contiene la configuración actual de dihco repositorio.\n",
+    "El comando ```git config``` config puede acceder a las configuraciones de:\n",
     "\n",
-    "La configuración usa la estructura de un documento basado en [TOML](https://github.com/toml-lang/toml)."
+    "* La aplicación *Git* dentro del sistema en el que se encuentra.\n",
+    "* El usuario de *Git*.\n",
+    "* El repositorio que se está gestionando.\n",
+    "\n",
+    "La sintaxis para definir el ámbito de ```git config``` es:\n",
+    "\n",
+    "```\n",
+    "git config <ámbito>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<ámbito>``` puede ser:\n",
+    "   * ```--local``` para la configuración del repositorio que se está gestionando.\n",
+    "   * ```--global``` para la configuración global del usuario de *Git*.\n",
+    "   * ```--system``` para la configuración de la aplicación de *Git* en el sistema en el que senncuetra instalada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### El archivo ```.git/config``` de un repositorio local.\n",
+    "\n",
+    "El archivo ```config``` localizado en el directorio ```.git``` de un repositorio local contiene la configuración actual de dihco repositorio."
    ]
   },
   {
@@ -694,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Edición del archivo de configuración de Git con la opción ```-e```.\n",
+    "### Edición de un archivo de configuración de *Git * con la opción ```-e```.\n",
     "\n",
     "Esta opción permite abrir un editor para modificar el archivo de configuración.\n",
     "``` bash\n",
