--- a/02_introduccion_a_git.ipynb
+++ b/02_introduccion_a_git.ipynb
@@ -235,14 +235,46 @@
     "\n",
     "Para conocer o modificar la configuración de *Git* o de un repositorio de *Git* se utiliza el comando ```git config```.\n",
     "\n",
-    "Dicho comando puede gestionar la configuración general de *Git* o la configuración de un repositorio específico."
+    "Dicho comando puede gestionar la configuración general de *Git* o la configuración de un repositorio específico.\n",
+    "\n",
+    "La documentacion oficial de ```git config``` puede ser consultada en la siguiente liga:\n",
+    "\n",
+    "https://git-scm.com/docs/git-config"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Las siguientes celdas mostrarán la documentación del comando ```git config```."
+    "### Despliegue del listado de campos de la  configuración.\n",
+    "\n",
+    "La opción ```--list```o ```-l``` se utiliza pare desplegar información, por lo que la siguiente sintaxis regresará  un listado de los campos de que conforman la configuración de *Git*, tanto de la informació del usuario *Git*, así como la del repositorio en el que se encuentra.\n",
+    "\n",
+    "``` bash\n",
+    "git config --list \n",
+    "```\n",
+    "\n",
+    "El resultado es un listado de estructuras ```<registro>.<campo>=<valor>```.\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<registro>``` corresponde a un registro de la configuración.\n",
+    "* ```<campo>``` corresponde a un campo específico dentro del registro.\n",
+    "* ```<valor>``` corresponde al valor asignado al campo indicado. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará la configuración del usuario actual y del repositorio al que pertence esta notebook."
    ]
   },
   {
@@ -253,18 +285,63 @@
    },
    "outputs": [],
    "source": [
-    "git help config"
+    "git config --list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Despliege de un valor de un campo con la opción ```--get```.\n",
+    "\n",
+    "Mientras que la opción ```--list``` despliega todos los datos de configuración, la opción ```--get``` sólo regresará el valor del campo especificado.\n",
+    "\n",
+    "``` bash\n",
+    "git config --get <registro>.<campo>\n",
+    "```\n",
+    "\n",
+    "En caso de no encontrar una coincidencia exacta de la estructura ```<registro>.<campo>``` dentro de la configuración, no se deplegará nada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplos:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda regresará el valor del campo ```url``` del registro ```remote.origin```."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "git config"
+    "git config --get remote.origin.url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda regresará el valor del campo ```erroneo``` del registro ```remote.origin```. En vista de que este campo no existe, no se devolverá nada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git config --get remote.origin.erroneo"
    ]
   },
   {
@@ -273,33 +350,37 @@
    "source": [
     "### Ámbitos de configuración de *Git*.\n",
     "\n",
-    "El comando ```git config``` config puede acceder a las configuraciones de:\n",
+    "El comando ```git config``` config puede acceder a:\n",
     "\n",
-    "* La aplicación *Git* dentro del sistema en el que se encuentra.\n",
-    "* El usuario de *Git*.\n",
-    "* El repositorio que se está gestionando.\n",
+    "* La configuración del repositorio que se está gestionando, la cual está ligada al archivo ```config``` del subdirectorio ```.git``` del repositorio.\n",
+    "* La configuración del usuario de *Git*, la cual está ligada al archivo ```.gitconfig``` localizado en el directorio *home* del usuario.\n",
+    "* La configuración de  aplicación *Git* dentro del sistema en el que se encuentra, la cual está, ligada al archivo ```/etc/gitconfig``` del sistema.\n",
+    "\n",
+    "**Nota:** Los archivos de configuración de ```Git``` están estructurados conforme al formato  \n",
     "\n",
     "La sintaxis para definir el ámbito de ```git config``` es:\n",
     "\n",
     "```\n",
-    "git config <ámbito>\n",
+    "git config --<opción de ámbito> <opciones>\n",
     "```\n",
     "\n",
     "Donde:\n",
     "\n",
-    "* ```<ámbito>``` puede ser:\n",
-    "   * ```--local``` para la configuración del repositorio que se está gestionando.\n",
-    "   * ```--global``` para la configuración global del usuario de *Git*.\n",
-    "   * ```--system``` para la configuración de la aplicación de *Git* en el sistema en el que senncuetra instalada."
+    "* ```<opción de ámbito>``` puede ser:\n",
+    "   * ```local``` para la configuración del repositorio que se está gestionando.\n",
+    "   * ```global``` para la configuración global del usuario de *Git*.\n",
+    "   * ```system``` para la configuración de la aplicación de *Git* en el sistema en el que se encuentra instalada.\n",
+    "   \n",
+    "En caso de que no se defina un ámbito, el comando ```git config``` traerá la configuración de los ámbitos ```--local``` y ```--global```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### El archivo ```.git/config``` de un repositorio local.\n",
+    "#### El archivo ```.git/config``` del ámbito ```--local```.\n",
     "\n",
-    "El archivo ```config``` localizado en el directorio ```.git``` de un repositorio local contiene la configuración actual de dihco repositorio."
+    "El archivo  ```.git/config``` dentro de un repostiorio de *Git* contiene la configuración de dicho repositorio."
    ]
   },
   {
@@ -331,9 +412,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El archivo de configuración global de *Git*.\n",
+    "* La siguiente celda desplegará la configuración del archivo ```.git/config``` del repsitorio actual usando el comando  ```git config --local list```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git config --local --list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### El archivo ```~/.gitconfig``` del ámbito ```--global```.\n",
     "\n",
-    "El archivo de configuración de *Git* se llama ```.gitconfig``` y se encuentra en el directorio *home* del usuario. "
+    "El archivo de configuración del usuario se llama ```.gitconfig``` y se encuentra en el directorio *home* del usuario. "
    ]
   },
   {
@@ -365,106 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Despliegue de un listado de campos con la opción ```--list```.\n",
-    "\n",
-    "La opción ```--list```o ```-l``` se utiliza pare desplegar información, por lo que la siguiente sintaxis reresará  un listado de los campos de que conforman la configuración de *Git*, tanto de la información global básica de *Git*, así como la del repositorio en el que se encuentra.\n",
-    "\n",
-    "``` bash\n",
-    "git config --list \n",
-    "```\n",
-    "\n",
-    "\n",
-    "El resultado es un listado de pares ```<campo>=<valor>```."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda mostrará la configuración general de *Git* y la del repositorio al que pertence esta notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "git config --list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Despliege de un valor de un campo con la opción ```--get```.\n",
-    "\n",
-    "Mientras que la opción ```--list``` despliega todos los datos de configuración, la opción ```--get``` sólo regresará el valor del campo especificado.\n",
-    "\n",
-    "``` bash\n",
-    "git config --get <campo>\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda regresará el valor del campo ```remote.origin.url```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "git config --get remote.origin.url"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Selección del ámbito global con la opción ```--global```.\n",
-    "\n",
-    "La opción ```--global``` le indica a ```git config``` que ese comando se aplicará exclusivamente al ámbito global de *Git*, por lo que el siguiente comando desplegará solo la configuración global:\n",
-    "\n",
-    "``` bash\n",
-    "git config --global --list\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda mostrará exclusivamente la información global de *Git*."
+    "* La siguiente celda desplegará la configuración del archivo ```~/.gitconfig```usando el comando  ```git config --global list```."
    ]
   },
   {
@@ -482,26 +480,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Selección de la configuración del repositorio con la opción ```--local```.\n",
+    "#### El archivo ```/etc/.gitconfig``` del ámbito ```--system```.\n",
     "\n",
-    "La opción ```--local``` le indica a ```git config``` que ese comando se aplicará exclusivamente al repositorio actual por lo que el siguiente comando desplegará solo la configuración local:\n",
-    "\n",
-    "``` bash\n",
-    "git config --local --list\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Selección de la configuración del  sistema con la opción ```--system```.\n",
-    "\n",
-    "La opción ```--system``` le indica a ```git config``` que ese comando se aplicará exclusivamente a la configuración de *Git* en el sistema. En entornos basados en *GNU/Linux* el archivo de configuración se localiza en  ```/etc/gitconfig```:\n",
-    "\n",
-    "``` bash\n",
-    "git config --system --list\n",
-    "```"
+    "La opción ```--system``` le indica a ```git config``` que ese comando se aplicará a la configuración de la aplicación *Git* en el sistema. En entornos basados en *GNU/Linux* el archivo de configuración se localiza en  ```/etc/gitconfig```:"
    ]
   },
   {
@@ -515,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda tratará de buscar la configuración contenida en el archivo ```/etc/gitconfig```.\n",
+    "* La siguiente celda tratará de desplegar la configuración contenida en el archivo ```/etc/gitconfig``` usando el comando  ```git config --system list```.\n",
     "\n",
     "**Nota:** Es probable que el archivo ```/etc/gitconfig``` no exista y entonces se producirá un mensaje de error."
    ]
@@ -535,43 +516,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adición de un campo a la configuración.\n",
+    "### Adición o modificación de un campo de la configuración.\n",
+    "\n",
+    "Es posible añadir un campo o modificar el valor de un campo de la configuración de *Git* mediante la siguiente sintaxis:\n",
     "\n",
     "```\n",
-    "git config <campo> <valor>\n",
-    "```"
+    "git config --<opcion de ámbito> <registro>.<campo> <valor>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<registro>``` indica el nombre del registro al que pertenece el campo a añadir o modificar.\n",
+    "* ```<campo>``` indica el nombre del campo a añadir o modificar.\n",
+    "* ```<valor>``` indica el valor del campo a añadir o modificar.\n",
+    "* ```<opción de ámbito>``` es el ámbito al que se añadirá el campo. En caso de no definirse, se realziará una búsqueda en los ámbitos ```--local``` y ```--global```.\n",
+    "\n",
+    "Este comando buscará un registro que coincida y posteriormente un campo que coincida en los archivos de confoguración correspondientes. \n",
+    "* En caso de que exista un campo que coincida con la estructura ```<registro>.<campo>```, el valor de dicho campo será sustituido por el valor ingresado. \n",
+    "* En caso de que no exista un campo que coincida con la estructura ```<registro>.<campo>```, el campo será creado con el valor ingresado. \n",
+    "\n",
+    "El contenido de ```<valor>``` siempre será considerado como una cadena de caracteres. En caso de que el valor sea una cadena de caracteres que incluya espacios, es necesario encerrar dicho valor entre comillas ```\" \"```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Configuración mínima de un usuario de *Git*.\n",
+    "#### Ejemplo de la configuración mínima de un usuario de *Git*.\n",
     "\n",
-    "Para poder crear un repositorio propio, primero es recomendable definir los datos del usuario."
+    "Para poder realizar operaciones de \"commit\", es recomendable definir los datos básicos del usuario:\n",
+    "\n",
+    "* ```user.name``` para el nombre del usuario.\n",
+    "* ```user.email``` para la dirección de correo electronico del usuario.\n",
+    "\n",
+    "Estos datos pertenecen al ámbito ```--global```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los datos del usuario pertencen al registro ```user``` y cada campo del usuario se definen mediante la siguiente sintaxis:\n",
-    "\n",
-    "```\n",
-    "user.<campo>\n",
-    "```\n",
-    "\n",
-    "Definición de nombre del usuario de *Git* se utiliza:\n",
-    "\n",
-    "```  bash\n",
-    "git config --global user.name \"<nombre>\"\n",
-    "```\n",
-    "\n",
-    "Definición del correo electrónico del usuario de *Git* se utiliza:\n",
-    "\n",
-    "```  bash\n",
-    "git config --global user.email \"<dirección de correo>\"\n",
-    "```"
+    "* la siguiente celda asignará el valor ```Comunidad Pythonista``` al campo ```user.name``` en el ámbito ```--global```. \n",
+    "* Debido a que el valor es una cadena de caracteres con espacios, es necesario encerrarlo entre comillas."
    ]
   },
   {
@@ -582,7 +568,14 @@
    },
    "outputs": [],
    "source": [
-    "git config --global user.name \"Jose Luis Chiquete V.\""
+    "git config --global user.name \"Comunidad Pythonista\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* la siguiente celda asignará el valor ```contacto@pythonista.io``` al campo ```user.email``` en el ámbito ```--global```. En este caso, las comillas son opcionales."
    ]
   },
   {
@@ -593,7 +586,14 @@
    },
    "outputs": [],
    "source": [
-    "git config --global user.email josech@gmail.com"
+    "git config --global user.email contacto@pythonista.io"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguientes celdas mostrará las modificaciones a la configuración."
    ]
   },
   {
@@ -615,7 +615,7 @@
    },
    "outputs": [],
    "source": [
-    "git config --global --get user.email"
+    "git config --get user.email"
    ]
   },
   {
@@ -631,6 +631,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Ejemplo de asignación de un campo inútil a la configuración.\n",
+    "\n",
     "Es posible añadir múltiples campos mediante ```git config```. El algunos casos estos campos no son útiles para *Git*."
    ]
   },
@@ -638,14 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejemplo:**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* La siguiente celda creará el campo ```use.error``` el cual se guardará en la configuración global, pero quen no afecta en nada a *Git*."
+    "* La siguiente celda creará el campo ```error``` en le registro ```use``` el cual se guardará en el ámbito ```--global``` con el valor ```Error```."
    ]
   },
   {
@@ -656,7 +651,7 @@
    },
    "outputs": [],
    "source": [
-    "git config --global use.error \"Error\""
+    "git config --global use.error Error"
    ]
   },
   {
@@ -667,19 +662,19 @@
    },
    "outputs": [],
    "source": [
-    "git config -l"
+    "git config --get use.error"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eliminación de un campo mediante la opción ```--remove```.\n",
+    "### Eliminación de un registro dentro de la configuración.\n",
     "\n",
-    "Para eliminar un campo completo, se utiliza.\n",
+    "Para eliminar un registro, se utiliza la opción ```--remove```.\n",
     "\n",
     "```  bash\n",
-    "git config --remove <campo>\n",
+    "git config --remove <registro>\n",
     "```"
    ]
   },
@@ -703,15 +698,6 @@
    "outputs": [],
    "source": [
     "git config -l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat ~/.gitconfig"
    ]
   },
   {
