--- a/03_gestion_de_repositorios.ipynb
+++ b/03_gestion_de_repositorios.ipynb
@@ -4,7 +4,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejercicio sobre la gestion de \"commits\"."
+    "<a href=\"https://pythonista.io\"> <img src=\"img/pythonista.png\" width=\"100px\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gestión de repositorios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Estructura de un repositorio de *Git*.\n",
+    "\n",
+    "Un repositorio de *Git* es un directorio el cual a su vez contiene un subdirectorio ```.git``` con una estructura similar a la siguiente:\n",
+    "``` bash\n",
+    ".git\n",
+    "├── config\n",
+    "├── description\n",
+    "├── FETCH_HEAD\n",
+    "├── HEAD\n",
+    "├── hooks\n",
+    "├── index\n",
+    "├── info\n",
+    "├── logs\n",
+    "│   ├── HEAD\n",
+    "│   └── refs\n",
+    "├── objects\n",
+    "│   ├── info\n",
+    "│   └── pack\n",
+    "├── ORIG_HEAD\n",
+    "└── refs\n",
+    "    ├── heads\n",
+    "    ├── remotes\n",
+    "    └── tags\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Incialización de un repositorio.\n",
+    "\n",
+    "El comando ```git init``` permite crear la estructura básica de un subdirectorio ```.git``` en un directorio dado mediante la siguiente sintaxis:\n",
+    "\n",
+    "\n",
+    "``` bash\n",
+    "git init <ruta>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<ruta>``` es la ruta del directorio a inicializar. Si no se indica la ruta, el comando creará el directorio ```.git``` en el directorio desde el cual se ejecuta el comando.\n",
+    "\n",
+    "Para mayor información sobre ```git init``` es posible consultar la siguiente liga: \n",
+    "\n",
+    "https://git-scm.com/docs/git-init"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda creará el directorio ```demo```."
    ]
   },
   {
@@ -12,7 +85,316 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "mkdir demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda inicializará al directorio ```demo```como un repositorio de *Git*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git init demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda ejecutará el comando ```tree``` para el subdirectorio ```demo/.git```, mostrando su estructura. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "tree demo/.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Estado de un repositorio.\n",
+    "\n",
+    "El estado de un respositorio corresponde al estado de todos los archivos a los que *Git* está dando seguimiento dentro de dicho repositorio.\n",
+    "\n",
+    "La característica principal de un gestor de versiones es la de poder conservar un registro detallado del estado de un repositorio en un momento específico.\n",
+    "\n",
+    "### Los \"commits\".\n",
+    "\n",
+    "Guardar el estado de un repositorio de forma continua como si se tratara de una película resulta ser poco eficiente y costoso en recursos de almacenamiento. Es por ello que los gestores de verisones como *Git* han optado por conservar el estado de un repositorio sólo cuando el usuario decide asentarlos. A dicha accion se le conoce como hacer un \"commit\".\n",
+    "\n",
+    "Los \"commits\" son la base del control de versiones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Despliegue del estado de un repositorio.\n",
+    "\n",
+    "El comando ```git status``` permite conocer el estado de un repositorio mediante la siguiente sintaxis:\n",
+    "\n",
+    "``` bash\n",
+    "git status <ruta>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<ruta>``` es la ruta del directorio a consultar. Si no se indica la ruta, el comando consultará el estado del  directorio desde el cual se ejecuta el comando.\n",
+    "\n",
+    "En caso de que la ruta no corresponda a un directorio que contenga una estructura de directorio ```.git``` adecuada, se generará unmensaje de error.\n",
+    "\n",
+    "Para mayor información sobre ```git status``` es posible consultar la siguiente liga: \n",
+    "\n",
+    "https://git-scm.com/docs/git-status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplos:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará el estado del directorio ```demo```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará el estado del directorio en el que se encuentra esta notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rastreo de los archivos dentro de un repositorio.\n",
+    "\n",
+    "*Git* tiene la capacidad de dar seguimiento a los cambios de cada archivo dentro del repositorio, identificando a cada uno de ellos como un objeto.\n",
+    "\n",
+    "Para que *Git* pueda dar seguimiento a un archivo, es necesario darlo de alta en su índice. Una vez que un archivo es dado de alta, *Git* puede evaluar si dicho archivo ha sido modificado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Área de preparación (staging area).\n",
+    "\n",
+    "*Git* permite definir puntualmente aquellos archivos cuyos cambios serán asentados en un commit. \n",
+    "\n",
+    "El área de preparación (staging area) permite al usuario registrar aquellos cambios que serán incluidos en el commit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estado de un archivo.\n",
+    "\n",
+    "* Sin seguimiento (untracked), lo que implica que el archivo no está en el índice del repositorio.\n",
+    "* En seguimiento (tracked) lo que implica que el archivo está en el índice del repositorio.\n",
+    "    * Modificado (modified) lo que implica que un archivo ha sido modificado, eliminado o ha cambiado de nombre.\n",
+    "    * No modificado (modified).\n",
+    "    \n",
+    "El comando ```git status``` da un resumen de:\n",
+    "* Aquellos archivos creados después del último commit y que no tienen seguimiento.\n",
+    "* Aquellos archovos que están en seguimiento y que fueron modificados después del último commit. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Seguimiento y rastreo de archivos.\n",
+    "\n",
+    "El comando```git add``` es el  encargado tanto de dar seguimiento a un archivo como de rastrear y registrar los cambios en el área de preparación. Su sintaxis es la siguiente:\n",
+    "\n",
+    "\n",
+    "```\n",
+    "git add <patrón o ruta> <opciones>\n",
+    "```\n",
+    "Donde:\n",
+    "\n",
+    "* ```<patrón o ruta>``` puede ser la ruta a un archivo o directorio específico o un patrón que identifique a más de un archivo.\n",
+    "* ```<opciones>``` este comando cuenta con varias opciones útiles.\n",
+    "\n",
+    "https://git-scm.com/docs/git-add"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### La opción ```--all```.\n",
+    "\n",
+    "Esta opción seleccionará a todos los archivos del respositorio "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Listado de archivos en el índice del repositorio.\n",
+    "\n",
+    "```\n",
+    "git ls-files\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git ls-files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eliminacion de un archivo del índice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "git rm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El archivo ```.gitignore```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Asentando los cambios en un repositorio (\"commit\")."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git commit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Revisión de la actividad de un repositorio de un archivo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Revisión de los cambios entre commits."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,6 +512,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "git ls-files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "git add archivo-1"
    ]
   },
@@ -148,6 +539,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "git ls-files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "git add archivo-*"
    ]
   },
@@ -158,6 +558,15 @@
    "outputs": [],
    "source": [
     "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git ls-files"
    ]
   },
   {
@@ -493,6 +902,14 @@
    "outputs": [],
    "source": [
     "git diff pythonista.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
    ]
   }
  ],
